# Povedit

./: CMakeLists.txt  POVEDIT.geany  Povedit.vide  README.markdown  wscript
data/: CMakeLists.txt  povedit.desktop
icons/: CMakeLists.txt
po/: POTFILES.in  es.po  povedit.pot  pt_BR.po  wscript_build  wscript_buildc
povedit/: config.vala  povedit.vala  preferences.vala  wscript_build
povedit/vapi/: config.vapi
src/: CMakeLists.txt  config.h.cmake  config.vala  help.vala  povedit.vala  preference.vala
